# math-modeling

./: pyproject.toml
1-lab/: main.py  utils_3d.py
2-lab/: main.py  rocket.py  task1.py  task2.py  utils.py
3-lab/: main.py  task1.py
4-lab/: main.py
5-lab/: main.py
6-lab/: main.py
