[tool.poetry]
name = "math-modeling"
version = "0.1.0"
description = ""
authors = ["novoseltcev <novoseltcev.stanislav@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
