[tool.poetry]
name = "math-modeling"
version = "0.1.0"
description = ""
authors = ["novoseltcev <novoseltcev.stanislav@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.6.0"
scipy = "^1.9.3"


[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
